--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,8 @@ small, .font_small {
   #content a {
     color: #222;
     text-decoration: underline;
-    text-decoration-color: #aaa; }
+    text-decoration-color: #aaa;
+    text-decoration-skip: ink; }
   #content a:hover {
     color: #4682b4; }
   #content .tags {
