--- a/css/style.scss
+++ b/css/style.scss
@@ -349,7 +349,7 @@ small, .font_small {font-size: 0.833em;}
             border: none;
             height: 1px;
             background-color: $fadefg;
-            margin-top: 1.5em 0 0.2em 0;
+            margin: 1.5em 0 0.2em 0;
             width: 10em;
         }
         a {
