--- a/css/style.css
+++ b/css/style.css
@@ -265,5 +265,11 @@ small, .font_small {
       text-decoration: none; }
     #content .footnotes ol {
       margin: 0.2em 0; }
+  #content iframe {
+    margin: 0;
+    padding: 0;
+    border: none;
+    width: 100%;
+    height: 500px; }
 
 /*# sourceMappingURL=style.css.map */
