--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ small, .font_small {
       z-index: 9998;
       width: 100%;
       display: block;
-      background-color: #b22222;
+      background-color: #b23e3e;
       color: #fff;
       text-align: left;
       padding: 0 0.5em; } }
@@ -271,5 +271,13 @@ small, .font_small {
     border: none;
     width: 100%;
     height: 500px; }
+  #content .juliaversionwarning {
+    background-color: #aaa;
+    color: #fff;
+    padding: 0.5em 0.8em;
+    margin: 0; }
+    #content .juliaversionwarning p {
+      margin: 0;
+      padding: 0; }
 
 /*# sourceMappingURL=style.css.map */
