--- a/css/style.scss
+++ b/css/style.scss
@@ -17,6 +17,9 @@ $content_width: 40em;
 $content_padding: 8em;
 $smallscreen_padding: 0.5em;
 
+$warningbg: #b23e3e;
+$warningfg: #fff;
+
 $small_screen_width: $content_width + 2 * $smallscreen_padding;
 
 
@@ -88,8 +91,8 @@ small, .font_small {font-size: 0.833em;}
         z-index: 9998;
         width: 100%;
         display: block;
-        background-color: #b22222;
-        color: #fff;
+        background-color: $warningbg;
+        color: $warningfg;
         text-align: left;
         padding: 0 0.5em;
     }
@@ -365,5 +368,15 @@ small, .font_small {font-size: 0.833em;}
         border: none;
         width: 100%;
         height: 500px;
+    }
+    .juliaversionwarning {
+        background-color: $fadefg;
+        color: #fff;
+        padding: 0.5em 0.8em;
+        margin: 0;
+        p {
+            margin: 0;
+            padding: 0;
+        }
     }
 }
