--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,13 @@ body {
   padding: 0;
   background-color: #fff;
   color: #222;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Merriweather', serif;
   font-weight: normal;
   line-height: 1.5; }
 
 h1, h2, h3, h4 {
   margin: 1.875rem 0 0.9375rem 0;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 1; }
 
 p, ol, ul {
