Publishing to gh-pages.

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
   padding: 0;
   background-color: #fff;
   color: #222;
-  font-family: 'Merriweather', serif;
+  font-family: 'Noto Serif', serif;
   font-weight: normal;
   line-height: 1.5; }
 
