--- a/css/style.scss
+++ b/css/style.scss
@@ -48,7 +48,7 @@ body {
     padding: 0;
     background-color: $lightbg;
     color: $lightfg;
-    font-family: 'Merriweather', serif;
+    font-family: 'Noto Serif', serif;
     font-weight: normal;
     line-height: $base-line-height;
 }
